# deep-learning

./: README.md  benchmark.py  cpu_info.py  devices.py  gpu_info.py  keras_demo.py  pyproject.toml  requirements.txt  simple.py  tf_simple.py
.github/workflows/: python-package.yml
tests/: test_deep_learning.py
